Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85259

Large fonts are not smooth with freetype

XMLWordPrintable

    • Linux/X11, Linux/Yocto, QNX
    • 037dce81fc27ec241edb6829f6df41927b80666e (qt/qtbase/dev) bdcabea1eb340dfd764c9fa00bfd09e44a90a6b0 (qt/qtbase/5.15)

      Setting pixelsize to 240 on eglfs or QNX or 360 on X11 causes the edges not to be smooth and with Native rendering broken.

      Please check the screenshots or photos and run the attached QML file to reproduce it.

      
      import QtQuick 2.12
      import QtQuick.Window 2.12
      import QtQuick.Controls 2.5
      
      Window {
       visible: true
       width: 640
       height: 480
       title: qsTr("Hello World")
       Column {
       anchors.fill: parent
       Row {
       width: 640
       height: 440
       Column {
       width: 320
       height: 360
       Text {
       text: "0"
       font.pixelSize: slider.value
       renderType: Text.QtRendering
       }
       Text {
       text: "renderType: Text.QtRendering\nfont.pixelSize:"+slider.value
       font.pixelSize: 18
       renderType: Text.QtRendering
       }
       }
       Column {
       width: 320
       height: 360
       Text {
       text: "0"
       font.pixelSize: slider.value
       renderType: Text.NativeRendering
       }
       Text {
       text: "renderType: Text.NativeRendering\nfont.pixelSize:"+slider.value
       font.pixelSize: 18
       renderType: Text.NativeRendering
       }
       }
       }
       Slider{
       id: slider
       width: 640
       height: 40
       from: 120
       to: 360
       value: 240
       }
       }
      }
      
      

        1. IMG_20200625_150857.jpg
          3.79 MB
          Karim Pinter
        2. IMG_20200625_150905.jpg
          5.02 MB
          Karim Pinter
        3. main.qml
          1 kB
          Karim Pinter
        4. Screenshot from 2020-06-25 15-12-29.png
          38 kB
          Karim Pinter
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes