Support glyphs larger than 255x255 with Freetype engine

We used chars for the width and height of glyphs when caching
them in the Freetype engine. This was okay for Qt Widgets because
we would fall back to QPainterPath when the fonts were too big
anyway (though this has since become configurable).

But in Qt Quick, when NativeRendering is in use, we will always cache
glyphs, because they need to be uploaded to the GPU. Also 255 is
no longer a large font size with current screen sizes, so we need to
upgrade our maximum. The new maximum size is 65535x65535.

[ChangeLog][QtGui][Text] Fixed a bug where glyphs would be clipped
at very large sizes.

Fixes: QTBUG-85259
Change-Id: I9a01a707b274e5f12e49c1b0bd58f743abae9f5e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 037dce81fc27ec241edb6829f6df41927b80666e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>